[gd_scene load_steps=7 format=3 uid="uid://dmd0o3ay30stk"]

[ext_resource type="Script" uid="uid://0n7vljcwtxtq" path="res://scenes/towers/tower_select.gd" id="1_b20gc"]
[ext_resource type="Texture2D" uid="uid://bcntowfe3mmgk" path="res://assets/textures/towers/tower_1.png" id="2_sa3m4"]
[ext_resource type="Texture2D" uid="uid://h85yng6bom3f" path="res://assets/textures/towers/tower_3.png" id="3_r18j3"]
[ext_resource type="Texture2D" uid="uid://d3dp106nyyx0m" path="res://assets/textures/towers/tower_2.png" id="4_8dgud"]
[ext_resource type="Texture2D" uid="uid://7w5acqq63vnj" path="res://assets/textures/towers/tower_4.png" id="5_emi04"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b20gc"]
bg_color = Color(0.6, 0.6, 0.6, 0.556863)
corner_radius_top_left = 5000
corner_radius_top_right = 5000
corner_radius_bottom_right = 5000
corner_radius_bottom_left = 5000

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1057.0
mouse_filter = 1
script = ExtResource("1_b20gc")

[node name="Area" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = -301.0
offset_top = -299.0
offset_right = 299.0
offset_bottom = 301.0
theme_override_styles/panel = SubResource("StyleBoxFlat_b20gc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -196.0
offset_top = -128.0
offset_right = 196.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Tower1" type="TextureRect" parent="HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_sa3m4")
expand_mode = 1

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "≈Åucznicy 20G"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Tower2" type="TextureRect" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("3_r18j3")
expand_mode = 1

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Balista 40G"
horizontal_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="Tower3" type="TextureRect" parent="HBoxContainer/PanelContainer3/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("4_8dgud")
expand_mode = 1

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Trebusz 60G"
horizontal_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer4"]
layout_mode = 2

[node name="Tower4" type="TextureRect" parent="HBoxContainer/PanelContainer4/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("5_emi04")
expand_mode = 1

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Katapulta 90G"
horizontal_alignment = 1

[node name="Towers" type="Control" parent="." groups=["towers"]]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="gui_input" from="HBoxContainer/PanelContainer/HBoxContainer/Tower1" to="." method="_on_gui_input_1"]
[connection signal="gui_input" from="HBoxContainer/PanelContainer2/VBoxContainer/Tower2" to="." method="_on_gui_input_2"]
[connection signal="gui_input" from="HBoxContainer/PanelContainer3/VBoxContainer/Tower3" to="." method="_on_gui_input_3"]
[connection signal="gui_input" from="HBoxContainer/PanelContainer4/VBoxContainer/Tower4" to="." method="_on_gui_input_4"]
